# AD25

./: .gitignore
C++/: helloworld.cpp
C++/exam/: buffer.h  test.cpp
C++/w2-3/16-multi-instance-stack/: 16.cpp
C++/w2-3/examples/: singleton.cpp  usc-example.cpp  virtual-base.cpp
C++/w2-3/examples/new_delete/: class.cpp  global.cpp
C++/w2-3/examples/queue/: queue.cpp  queue.h  test.cpp
C++/w2-3/examples/stack/: stack.cpp  stack.h  test.cpp
C++/w2-3/examples/tree/: test.cpp  tree.cpp  tree.h
C++/w2-3/solutions/: exercise-23.cpp
C++/w2-3/solutions/exercise-18/: buffer.cpp  buffer.h  test.cpp
C++/w2-3/solutions/exercise-19/: stack.cpp  stack.h  test.cpp
C++/w2-3/solutions/exercise-20/: stack.cpp  stack.h  test.cpp
C++/w2-3/solutions/exercise-21/: stack.h
C++/w2-3/solutions/exercise-22/: queue.h
C++/w4-5/examples/: adaptors.cpp  array.cpp  darray.cpp  deque.cpp  forward_list.cpp  iterators.cpp  map.cpp  member.cpp  point.cpp  set.cpp  template.cpp  vector.cpp
C++/w4-5/examples/files/: file-bin.cpp  file-sys.cpp  file-txt.cpp
C++/w4-5/solutions/: exercise-24.cpp  exercise-25.cpp  exercise-28.cpp
C++/w4-5/solutions/exercise-26/: queue.h
C++/w4-5/solutions/exercise-27/: stack.h  test.cpp
C++/w4-5/solutions/exercise-29/: queue.h
C++/w50-51/: 1-macro.cpp  10-sort-structs.cpp  11-string-cases.cpp  12-func-pointers.cpp  13-luhn-algorithm.cpp  14-guessing-game.cpp  14.txt  15-datetime-validator.cpp  2-lower-upper-randnum.cpp  3-sort-array.cpp  4-matrix.cpp  5-prime-check.cpp  6-binary-bitwise.cpp  7-string-reverse.cpp  8-sort-arr-pointers.cpp  9-matrix-foreach.cpp
C++/w50-51/examples/: arr-ptr.cpp  calculator.cpp  dowhile.cpp  for.cpp  func-arr.cpp  goto.cpp  pointer-2.cpp  print.cpp  switch.cpp  while.cpp
C/exam-1/: exam-1.c  exam.txt
C/exam-2/: test.c  util.c  util.h
C/w39-40/: 1-hello-world.c  1.c  2-cmdline-macro.c  2.c  3.c  4.c  4b.c  5-sizeof.c  5.c  6-toupper-srand.c  6.c
C/w39-40/examples/: ascii.c  macro.c  scope.c
C/w39-40/preprocessors/: main  main.c  script.sh
C/w39-40/solutions/: exercise-2.c  exercise-4.c
C/w41/: 7-scanf-date-struct.c  7.c  7t.c  8.c  union.c
C/w41/examples/: typecasting.c
C/w41/solutions/: exercise-7.c  exercise-8.c
C/w42/: 10.c  11.c  12-check-if-prime.c  12.c  13-getchar-single-space.c  13.c  14.c  9-simple-sum.c  9.c
C/w42/examples/: calculator.c  char1.c  char2.c  dowhile.c  fizzbuzz.c  for.c  forloop.c  goto.c  switch.c
C/w42/solutions/: exercise-10.c  exercise-11.c  exercise-12.c  exercise-13.c  exercise-14.c  exercise-9.c
C/w43/: 15-sort-rand-nums.c  16.c  17.c  18.c  19.c  20-pointers-change-chrcase.c  21.c  22.c  23.c  24.c
C/w43/examples/: arr-ptr.c  array-0.c  array-1.c  array-2.c  string-1.c  string-2.c
C/w44/: 25-fill-print-arr-funcs.c  26-get-person_t.c  27.c  28-strcmp.c  28.c  29-print-primes-in-range.c  29.c  30.c  31-recursion.c  31.c  32-check-if-prime-func.c  33.c  34-misc-funcs-and-ptrs.c  35.c
C/w44/examples/: func.c
C/w45-46/: 37-txt-file.c  38-bin-file.c  38.c  39-posix-bin-file.c  39.c  users.txt
C/w47-49/: 40-str-tokenizer.c  40b.c  41.c  41b.c  42-assert-gcd-lcm-sort.c  42-util.h  42.c  util.c
C/w47-49/42-assert-gcd-lcm-sort/: 42-util.c  42.c
C/w47-49/43-single-instance-queue/: 43.c  queue.c  queue.h
C/w47-49/44-single-instance-stack/: 44.c  stack.c  stack.h
C/w47-49/solutions/: exercise-40.c  exercise-41.c
CI_CD/team-project/example/: main.cpp
CI_CD/w6-8/4-tdd-gtest/: linked_list.h
CI_CD/w6-8/examples/: gmock.cpp  placement-new.cpp
CI_CD/w6-8/examples/cmake/cmake1/: CMakeLists.txt
CI_CD/w6-8/examples/cmake/cmake1/lib/led/: led.h
CI_CD/w6-8/examples/cmake/cmake1/test/ldr/: test.cpp
CI_CD/w6-8/examples/cmake/cmake1/test/led/: test.cpp
CI_CD/w6-8/examples/cmake/cmake2/: CMakeLists.txt
CI_CD/w6-8/examples/cmake/cmake2/include/: config.h
CI_CD/w6-8/examples/cmake/cmake2/lib/: CMakeLists.txt
CI_CD/w6-8/examples/cmake/cmake2/lib/ldr/: ldr.cpp  ldr.h
CI_CD/w6-8/examples/cmake/cmake2/lib/led/: led.cpp
CI_CD/w6-8/examples/cmake/cmake2/src/: main.cpp
CI_CD/w6-8/examples/cmake/cmake2/test/ldr/: test.cpp
CI_CD/w6-8/examples/cmake/cmake2/test/led/: test.cpp
CI_CD/w6-8/examples/faking/interface/: CMakeLists.txt  main.cpp  test.cpp
CI_CD/w6-8/examples/faking/interface/date/: date.h
CI_CD/w6-8/examples/faking/interface/include/: idate.h
CI_CD/w6-8/examples/faking/interface/today/: today.h
CI_CD/w6-8/examples/faking/linktime/: CMakeLists.txt  main.cpp
CI_CD/w6-8/examples/faking/linktime/date/: date.cpp  date.h
CI_CD/w6-8/examples/faking/linktime/test/: date.cpp  date.h  test.cpp
CI_CD/w6-8/examples/faking/linktime/today/: today.h
CI_CD/w6-8/solutions/exercise-5/: CMakeLists.txt  queue.h  test.cpp
CI_CD/w9-11/: 13-formatted-table.py  14-compile.py  15.py-errors  16.py
CI_CD/w9-11/solutions/: exercise-10.py  exercise-11.py  exercise-12.py  exercise-13.py  exercise-14.py  exercise-16.py  exercise-9.py
ESD/: exercise-2.cpp  exercise-3.cpp
ESD/exam-1/: main.cpp
ESD/module1/: exercise-1.cpp
ESD/module1/examples/: 1-race-cond.cpp  10-ping-pong.cpp  11-cond_variable.cpp  12-ping-pong.cpp  13-ping-pong.cpp  14-volatile-shared.cpp  2-atomic.cpp  6-shared_mutex.cpp  9-lock_strategies.cpp
ESD/module3/examples/: blockbox.c  side-effect.c
ESD/module3/examples/leddriver/dual-targeting/preprocessor-time/test/: CMakeLists.txt
ESD/module3/examples/leddriver/dual-targeting/preprocessor-time/test/test_led_driver/: test.c
ESD/module3/examples/leddriver/link-time/test/: CMakeLists.txt
ESD/module3/examples/leddriver/link-time/test/test_led_driver/: test.c
ESD/module3/examples/leddriver/link-time/test/test_led_driver/driver/: gpio.c  gpio.h
ESD/module3/examples/qtexamples/mainwindow/: CMakeLists.txt  window.h
ESD/module3/examples/qtexamples/signal/: CMakeLists.txt  main.cpp  window.h
ESD/selftest/: CMakeLists.txt  frdm_mcxn236.overlay  prj.conf
ESD/selftest/src/: main.c
Python/: blank.py
Python/kattis/: metronome.py  permuted_arithmetic_sequence.py  permuted_arithmetic_sequence.txt
(+227 files in other folders)
